# auto-07p

./: .autorc  .gitignore  CHANGELOG  LICENSE.md  Makefile  Makefile.in  README  aclocal.m4  autorc  configure  configure.ac  setup.cfg  setup.py
.github/workflows/: test.yml
cmds/: @@H  @@LB  @@R  @@RD  @@RL  @H  @LB  @LL  @R  @RD  @RL  @a  @ap  @auto  @bp  @cl  @cnvc  @cp  @db  @df  @dl  @dlb  @dlp  @dm  @dsp  @duz  @e7  @e8  @e9  @eps  @ev  @fc  @fl  @gz  @h  @hb  @it  @j7  @j8  @j9  (+47 more)
demos/ab/: ab.auto  ab.f  ab.f90  autorc  c.ab  c.ab.1  c.ab.2  c.ab.3  clean.auto  plaut04.rc
demos/abc/: abc.auto  abc.f  abc.f90  c.abc  c.abc.1  c.abc.2  c.abc.3  c.abc.4  c.abc.5  clean.auto
demos/abcb/: abc.auto  abcb.auto  abcb.f90  c.abc  c.abcb  clean.auto
demos/apbp/: apbp.auto  apbp.f90  c.apbp  clean.auto
demos/apnf/: apnf.auto  c.apnf
demos/brc/: Makefile.in  brc.auto  brc.f  brc.f90  brc.inc  c.brc  c.brc.1  c.brc.2  c.brc.3  clean.auto
demos/brf/: Makefile.in  brf.auto  brf.f  brf.f90  brf.inc  c.brf  c.brf.1  c.brf.2  c.brf.3  clean.auto
demos/bru/: Makefile.in  bru.auto  bru.f  bru.f90  c.bru  c.bru.1  clean.auto
demos/bvp/: Makefile.in  README  bvp.auto  bvp.f  bvp.f90  c.bvp  c.bvp.1  c.bvp.2  c.bvp.3  clean.auto  plaut04.rc
demos/c2c/: c2c.auto  c2c.f90  c2cfolds.auto  clean.auto  plaut04.rc
demos/chu/: Makefile.in  c.chu  c.chu.1  c.chu.2  c.chu.3  c.chu.4  c.chu.5  chu.auto  chu.f  chu.f90  clean.auto
demos/cir/: Makefile.in  c.cir  c.cir.1  c.cir.2  c.cir.3  cir.auto  cir.f  cir.f90  clean.auto  h.cir.3
demos/cusp/: autorc  c.cusp  clean.auto  cusp.auto  cusp.f90  cusp.ipynb  plaut04.rc
demos/dd2/: Makefile.in  autorc  c.dd2  c.dd2.1  c.dd2.2  clean.auto  dd2.auto  dd2.f  dd2.f90
demos/enz/: Makefile.in  autorc  c.enz  c.enz.1  clean.auto  enz.auto  enz.f  enz.f90
demos/exp/: autorc  c.exp  c.exp.1  c.exp.2  clean.auto  exp.auto  exp.f  exp.f90  plaut04.rc
demos/ext/: Makefile.in  c.ext  c.ext.1  c.ext.2  clean.auto  ext.auto  ext.f  ext.f90
demos/ezp/: c.ezp  c.ezp.1  c.ezp.2  c.ezp.3  clean.auto  ezp.auto  ezp.f  ezp.f90  plaut04.rc
demos/ffn/: autorc  c.ffn.1  c.ffn.2  c.ffn.3  clean.auto  ffn.auto  ffn.f  ffn.f90
demos/fhh/: Makefile.in  c.fhn  c.fhn.1  c.fhn.10  c.fhn.11  c.fhn.2  c.fhn.3  c.fhn.4  c.fhn.5  c.fhn.6  c.fhn.7  c.fhn.8  c.fhn.9  clean.auto  fhn.auto  fhn.f  fhn.f90  h.fhn.10  h.fhn.3  h.fhn.4  h.fhn.6  h.fhn.7  h.fhn.8
demos/fhn/: c.fhn  c.fhn.1  c.fhn.2  c.fhn.3  c.fhn.4  clean.auto  fhn.auto  fhn.f  fhn.f90
demos/fnb/: c.fhn  c.fhn.1  c.fhn.2  c.fhn.3  c.fhn.4  c.fhn.5  c.fhn.6  c.fhn.7  clean.auto  fhn.auto  fhn.c  h.fhn.1  h.fhn.5
demos/fnc/: autorc  c.fnc  c.fnc.epsplus  clean.auto  fnc.auto  fnc.f90  plaut04.rc  plot.auto
demos/frc/: Makefile.in  c.frc  c.frc.1  c.frc.2  clean.auto  frc.auto  frc.f  frc.f90
demos/fsh/: Makefile.in  c.fsh  c.fsh.1  c.fsh.2  clean.auto  fsh.auto  fsh.f  fsh.f90
demos/hen/: autorc  c.hen  clean.auto  hen.auto  hen.f90
demos/int/: Makefile.in  c.int  c.int.1  c.int.2  c.int.3  clean.auto  int.auto  int.f  int.f90
demos/ivp/: c.ivp  (+6 more)
doc/: @tut  Makefile  README  auto.tex  macros.tex  plaut04_user_guide.tex  tutorial.tex  user_guide.tex
gui/: Makefile.in  README  Xdefaults.1  Xdefaults.2  aut.f  aut.f90  auto.makefile  auto.makefile.in  auto97.c  r.aut  sgi.makefile  solaris.makefile  sun.makefile  sun.makefile.bristol  sun.makefile.concordia  sun.makefile_orig
include/: GuiConsts.h  GuiFuncs.h  GuiGlobal.h  GuiMotif.h  GuiPar.h  GuiWidgets.h  auto.h  auto.h.NDIM=400  auto.h.sav  auto_f2c.h  config.h.in  fcon.h
plaut/: Makefile  Makefile.in  README  plaut.ps  plaut.tex  plautcom.f  plautdev.f  plautint.f  plautlib.f  plautmain.f
plaut04/: Makefile.am  Makefile.in  configure  configure.ac  plaut04.rc  r3bplaut04.rc
plaut04/doc/: Makefile.am  notes
plaut04/includes/: axis.h  gVarNames.h  gplaut04.h  polygon3d.h  r3bplaut04.h  tube.h  vNames.h
plaut04/src/: Makefile.am  Makefile.in  axis.c++  axis.h  bifurcation.c++  bifurcation.h  createBoundingBox.c++  createBoundingBox.h  createCoords.c++  createCoords.h  createDisk.c++  createDisk.h  createLegend.c++  createLegend.h  createSphere.c++  createSphere.h  drawCoords.c++  drawCoords.h  gReadBif.c++  gReadBif.h  gReadSol.c++  gReadSol.h  gmain.c++  gmainqt.c++  gmainqt.h  gmainxt.c++  normalizeBifData.c++  normalizeBifData.h  normalizeSolData.c++  normalizeSolData.h  polygon3d.c++  printToPS.c++  printToPS.h  readFM.c++  readFM.h  rounding.c++  rounding.h  solution.c++  solution.h  stringtrim.c++  (+2 more)
plaut04/src/r3b/: Makefile.am  Makefile.in  axis.c++  createBoundingBox.c++  createCoords.c++  createDisk.c++  createLegend.c++  createLibPoint.c++  createPrimary.c++  drawCoords.c++  gmain.c++  gmainr3b.c++  normalizeBifData.c++  normalizeSolData.c++  polygon3d.c++  printToPS.c++  readBif.c++  readFM.c++  readSol.c++  rounding.c++  stringtrim.c++  toInertialFrame.c++  tube.c++
plaut04/widgets/: Makefile.am  disk.iv
python/: AUTOCommands.py  AUTOExceptions.py  AUTOclui.py  AUTOutil.py  Makefile  Points.py  README  additionExample.py  auto.py  bifDiag.py  interactiveBindings.py  parseB.py  parseBandS.py  parseC.py  parseD.py  parseH.py  parseS.py  relabel.py  runAUTO.py  runDemo.py  test.py
src/: @C  @b  @c  Makefile  Makefile.in  ae.f90  autlab.f  autlib1.f  autlib2.f  autlib3.f  autlib4.f  autlib5.f  auto_constants.f90  blas.f  bvp.f90  bvpcont.f90  compat.f90  deletelp.f  double.f  eispack.f  equilibrium.f90  f2003.f90  fcon.f  fcon.h  floquet.f90  homcont.f90  interfaces.f90  interfaces.h  io.f90  keepbp.f  keeplp.f  keepsp.f  keepuz.f  kpbif.f  lapack.f  listlabels.f  main.f90  maps.f90  mesh.f90  mpi.f90  (+17 more)
tek2ps/: Makefile  Makefile.in  README  SharFile.Headers  pstek.pro  tek.h  tek2ps.c  tek2ps.doc
test/: README  all.auto  all97.auto  demo.auto  hom.auto  hyper.all  parse_test.py  python.auto  selec.auto  test.py
util/: Makefile.in  autlab.f90  deletelp.f90  double.f90  keepbp.f90  keeplp.f90  keepsp.f90  keepuz.f90  listlabels.f90  reduce.f90  relabel.c  relabel.f90  triple.f90  utility.f90  zero.f90
(+705 files in other folders)
