bin_PROGRAMS = r3bplaut04
INCLUDES = -I@top_srcdir@/plaut04/includes -Wno-deprecated
LIBS=$(DEPS_LIBS)

r3bplaut04_SOURCES = readBif.c++         readSol.c++          drawCoords.c++         toInertialFrame.c++    createDisk.c++\
        createPrimary.c++   createLibPoint.c++   normalizeSolData.c++   normalizeBifData.c++   stringtrim.c++ \
        printToPS.c++       tube.c++             polygon3d.c++          readFM.c++             createBoundingBox.c++\
        createCoords.c++    axis.c++             createLegend.c++       gmain.c++              rounding.c++
